--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "@jup-ag/api": "^6.0.29",
+    "dotenv": "^16.4.5",
     "install": "^0.13.0",
-    "pnpm": "^9.12.3"
+    "pnpm": "^9.12.3",
+    "typescript": "^5.6.3"
   }
 }
