--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 SECRET_KEY=[]
 SOLANA_RPC_URL=https://api.devnet.solana.com
+SOLANA_ENDPOINT=
 JUPITER_API_KEY=your_api_key_here
+HELIUS_ENDPOINT=https://devnet.helius-rpc.com/?api-key=
