--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Jupiter arbitrage bot",
   "main": "index.js",
   "scripts": {
-    "run": "",
+    "run": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,9 +12,16 @@
   "license": "MIT",
   "dependencies": {
     "@jup-ag/api": "^6.0.29",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.4",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "fs": "0.0.1-security",
     "install": "^0.13.0",
-    "pnpm": "^9.12.3",
+    "pnpm": "^9.12.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
